--- a/.gitignore
+++ b/.gitignore
@@ -421,6 +421,7 @@ $RECYCLE.BIN/
 
 # exclude .vscode/*
 /.vscode/settings.json
+/.vscode/launch.json
 
 # Generated compile_commands.json
 /compile_commands.json
