--- a/one/codelab/opentelemetry_example/BUILD.bazel
+++ b/one/codelab/opentelemetry_example/BUILD.bazel
@@ -4,8 +4,12 @@ cc_binary(
     name = "opentelemetry_example",
     srcs = ["main.cc"],
     deps = [
+        "//gtl:no_destructor",
         "@com_github_google_glog//:glog",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:str_format",
         "@io_opentelemetry_cpp//:api",
+        "@io_opentelemetry_cpp//:memory_exporter",
         "@io_opentelemetry_cpp//:ostream_exporter",
         "@io_opentelemetry_cpp//:sdk",
     ],
