WIP: Chore: add third_party deps

--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -23,6 +23,10 @@ load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
 # Constants
 #
 
+BAZEL_IO_VERSION = "4.2.2"  # 2021-12-03T09:26:35Z
+
+BAZEL_IO_SHA256 = "4c179ce66bbfff6ac5d81b8895518096e7f750866d08da2d4a574d1b8029e914"
+
 BAZEL_SKYLIB_VERSION = "1.1.1"  # 2021-09-27T17:33:49Z
 
 BAZEL_SKYLIB_SHA256 = "c6966ec828da198c5d9adbaa94c05e3a1c7f21bd012a0b29ba8ddbccb2c93b0d"
@@ -39,17 +43,17 @@ RULES_CC_COMMIT_ID = "0913abc3be0edff60af681c0473518f51fb9eeef"  # 2021-08-12T14
 
 RULES_CC_SHA256 = "04d22a8c6f0caab1466ff9ae8577dbd12a0c7d0bc468425b75de094ec68ab4f9"
 
-RULES_PYTHON_TAG = "0.4.0"  # 2021-09-12T22:58:33Z
+RULES_PYTHON_TAG = "0.6.0"  # 2022-01-05T00:06:20Z
 
-RULES_PYTHON_SHA256 = "954aa89b491be4a083304a2cb838019c8b8c3720a7abb9c4cb81ac7a24230cea"
+RULES_PYTHON_SHA256 = "a30abdfc7126d497a7698c29c46ea9901c6392d6ed315171a6df5ce433aa4502"
 
 RULES_JAVA_TAG = "5.0.0"  # 2021-11-23T10:46:14Z
 
 RULES_JAVA_SHA256 = "ddc9e11f4836265fea905d2845ac1d04ebad12a255f791ef7fd648d1d2215a5b"
 
-RULES_JVM_EXTERNAL_TAG = "4.1"  # 2021-05-18T15:00:52Z
+RULES_JVM_EXTERNAL_TAG = "4.2"  # 2021-11-24T07:31:45Z
 
-RULES_JVM_EXTERNAL_SHA = "f36441aa876c4f6427bfb2d1f2d723b48e9d930b62662bf723ddfb8fc80f0140"
+RULES_JVM_EXTERNAL_SHA = "cd1a77b7b02e8e008439ca76fd34f5b07aecb8c752961f9640dea15e9e5ba1ca"
 
 MAVEN_REPOSITORIES = [
     "https://maven.aliyun.com/nexus/content/groups/public/",
@@ -67,6 +71,13 @@ RULES_FUZZING_SHA256 = "127d7c45e9b7520b3c42145b3cb1b8c26477cdaed0521b02a0298907
 #
 # Starlark libraries
 #
+
+http_archive(
+    name = "io_bazel",
+    sha256 = BAZEL_IO_SHA256,
+    strip_prefix = "bazel-" + BAZEL_IO_VERSION,
+    url = "https://github.com/bazelbuild/bazel/archive/" + BAZEL_IO_VERSION + ".zip",
+)
 
 http_archive(
     name = "bazel_skylib",
@@ -113,9 +124,14 @@ http_archive(
     url = "https://github.com/bazelbuild/rules_foreign_cc/archive/0.7.0.tar.gz",
 )
 
-load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")
-
-rules_foreign_cc_dependencies(register_preinstalled_tools = False)
+http_archive(
+    name = "rules_perl",  # 2021-09-23T03:21:58Z
+    sha256 = "55fbe071971772758ad669615fc9aac9b126db6ae45909f0f36de499f6201dd3",
+    strip_prefix = "rules_perl-2f4f36f454375e678e81e5ca465d4d497c5c02da",
+    urls = [
+        "https://github.com/bazelbuild/rules_perl/archive/2f4f36f454375e678e81e5ca465d4d497c5c02da.tar.gz",
+    ],
+)
 
 http_archive(
     name = "rules_python",
@@ -151,8 +167,6 @@ remote_java_repository(
     version = "11",
 )
 
-register_toolchains("@remotejdk11_linux_toolchain_config_repo//:toolchain")
-
 http_archive(
     name = "rules_jvm_external",
     sha256 = RULES_JVM_EXTERNAL_SHA,
@@ -179,6 +193,16 @@ http_archive(
 )
 
 #
+# Starlark rules
+#
+
+load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")
+
+rules_foreign_cc_dependencies(register_preinstalled_tools = False)
+
+register_toolchains("@remotejdk11_linux_toolchain_config_repo//:toolchain")
+
+#
 # C++ deps
 #
 # Ordered lexicographical.
@@ -196,19 +220,6 @@ http_archive(
     ],
 )
 
-# TODO(zhangshuai.ds): consider about libressl.
-http_archive(
-    name = "openssl",
-    build_file = "//third_party/openssl:openssl.BUILD",
-    sha256 = "892a0875b9872acd04a9fde79b1f943075d5ea162415de3047c327df33fbaee5",
-    strip_prefix = "openssl-1.1.1k",
-    urls = [
-        "https://mirror.bazel.build/www.openssl.org/source/openssl-1.1.1k.tar.gz",
-        "https://www.openssl.org/source/openssl-1.1.1k.tar.gz",
-        "https://github.com/openssl/openssl/archive/OpenSSL_1_1_1k.tar.gz",
-    ],
-)
-
 http_archive(
     name = "com_github_gflags_gflags",  # 2018-11-11T21:30:10Z
     sha256 = "34af2f15cf7367513b352bdcd2493ab14ce43692d2dcd9dfc499492966c64dcf",
@@ -218,9 +229,9 @@ http_archive(
 
 http_archive(
     name = "com_github_google_benchmark",  # 2021-07-01T09:02:54Z
-    sha256 = "1cb4b97a90aa1fd9c8e412a6bc29fc13fc140162a4a0db3811af40befd8c9ea5",
-    strip_prefix = "benchmark-e451e50e9b8af453f076dec10bd6890847f1624e",
-    urls = ["https://github.com/google/benchmark/archive/e451e50e9b8af453f076dec10bd6890847f1624e.zip"],
+    sha256 = "018311a866428019cdfd052ea675e8b04082bb8c1e00869fb61875aadc637ede",
+    strip_prefix = "benchmark-7cb2914292886a1c2625faf5cc84743d1855d21b",
+    urls = ["https://github.com/google/benchmark/archive/7cb2914292886a1c2625faf5cc84743d1855d21b.tar.gz"],
 )
 
 http_archive(
@@ -235,6 +246,16 @@ http_archive(
     urls = ["https://github.com/google/glog/archive/v0.5.0.zip"],
 )
 
+http_archive(
+    name = "com_github_libevent_libevent",  # 2020-07-05T13:33:03Z
+    build_file = "//bazel/third_party/event:event.BUILD",
+    sha256 = "92e6de1be9ec176428fd2367677e61ceffc2ee1cb119035037a27d346b0403bb",
+    strip_prefix = "libevent-2.1.12-stable",
+    urls = [
+        "https://github.com/libevent/libevent/releases/download/release-2.1.12-stable/libevent-2.1.12-stable.tar.gz",
+    ],
+)
+
 # TODO(zhangshuai.ds): SIMD optimization.
 # https://github.com/cloudflare/zlib
 # zlib-ng
@@ -245,3 +266,108 @@ http_archive(
     strip_prefix = "zlib-1.2.11",
     urls = ["https://zlib.net/zlib-1.2.11.tar.gz"],
 )
+
+http_archive(
+    name = "com_github_nelhage_rules_boost",  # 2021-08-27T15:46:06Z
+    patch_cmds = ["sed -i 's/net_zlib_zlib/com_github_madler_zlib/g' BUILD.boost"],
+    patch_cmds_win = [
+        """$content = (Get-Content 'BUILD.boost') -replace "net_zlib_zlib", "com_github_madler_zlib"
+Set-Content BUILD.boost -Value $content -Encoding UTF8
+""",
+    ],
+    sha256 = "2d0b2eef7137730dbbb180397fe9c3d601f8f25950c43222cb3ee85256a21869",
+    strip_prefix = "rules_boost-fce83babe3f6287bccb45d2df013a309fa3194b8",
+    urls = [
+        "https://github.com/nelhage/rules_boost/archive/fce83babe3f6287bccb45d2df013a309fa3194b8.tar.gz",
+    ],
+)
+
+http_archive(
+    name = "com_google_absl",  # 2021-09-27T18:06:52Z
+    sha256 = "2f0d9c7bc770f32bda06a9548f537b63602987d5a173791485151aba28a90099",
+    strip_prefix = "abseil-cpp-7143e49e74857a009e16c51f6076eb197b6ccb49",
+    urls = ["https://github.com/abseil/abseil-cpp/archive/7143e49e74857a009e16c51f6076eb197b6ccb49.zip"],
+)
+
+http_archive(
+    name = "com_google_googletest",  # 2021-07-09T13:28:13Z
+    sha256 = "12ef65654dc01ab40f6f33f9d02c04f2097d2cd9fbe48dc6001b29543583b0ad",
+    strip_prefix = "googletest-8d51ffdfab10b3fba636ae69bc03da4b54f8c235",
+    urls = ["https://github.com/google/googletest/archive/8d51ffdfab10b3fba636ae69bc03da4b54f8c235.zip"],
+)
+
+http_archive(
+    name = "com_google_protobuf",  # 2021-10-29T00:04:02Z
+    build_file = "//bazel/third_party/protobuf:protobuf.BUILD",
+    patch_cmds = [
+        "sed -i protobuf.bzl -re '4,4d;417,508d'",
+    ],
+    patch_cmds_win = [
+        """$content = Get-Content 'protobuf.bzl' | Where-Object {
+    -not ($_.ReadCount -ne 4) -and
+    -not ($_.ReadCount -ge 418 -and $_.ReadCount -le 509)
+}
+Set-Content protobuf.bzl -Value $content -Encoding UTF8
+""",
+    ],
+    sha256 = "87407cd28e7a9c95d9f61a098a53cf031109d451a7763e7dd1253abf8b4df422",
+    strip_prefix = "protobuf-3.19.1",
+    urls = ["https://github.com/protocolbuffers/protobuf/archive/refs/tags/v3.19.1.tar.gz"],
+)
+
+# TODO(zhangshuai.ds): consider about libressl.
+http_archive(
+    name = "openssl",
+    build_file = "//bazel/third_party/openssl:openssl.BUILD",
+    # sha256 = "892a0875b9872acd04a9fde79b1f943075d5ea162415de3047c327df33fbaee5",
+    strip_prefix = "openssl-1.1.1m",
+    urls = [
+        "https://www.openssl.org/source/openssl-1.1.1m.tar.gz",
+        "https://github.com/openssl/openssl/archive/OpenSSL_1_1_1m.tar.gz",
+    ],
+)
+
+#
+# Python Dependencies
+#
+# Ordered lexicographical.
+#
+
+# load("@rules_python//python:pip.bzl", "pip_parse")
+
+# # Create a central repo that knows about the dependencies needed from
+# # requirements.txt. The requirements.txt is generated from
+# # poetry export -f requirements.txt --output requirements.txt --dev
+# pip_parse(
+#     name = "mono_pip_deps",
+#     requirements_lock = "//:requirements.txt",
+# )
+
+# # Load the starlark macro which will define your dependencies.
+# load("@mono_pip_deps//:requirements.bzl", "install_deps")
+
+# # Call it to define repos for your requirements.
+# install_deps()
+
+#
+# Perl Dependencies
+#
+
+load("@rules_perl//perl:deps.bzl", "perl_register_toolchains")
+
+perl_register_toolchains()
+
+#
+# Tools Dependencies
+#
+
+http_archive(
+    name = "com_grail_bazel_compdb",
+    sha256 = "d32835b26dd35aad8fd0ba0d712265df6565a3ad860d39e4c01ad41059ea7eda",
+    strip_prefix = "bazel-compilation-database-0.5.2",
+    urls = ["https://github.com/grailbio/bazel-compilation-database/archive/0.5.2.tar.gz"],
+)
+
+load("@com_grail_bazel_compdb//:deps.bzl", "bazel_compdb_deps")
+
+bazel_compdb_deps()
