--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -319,7 +319,7 @@ Set-Content protobuf.bzl -Value $content -Encoding UTF8
 http_archive(
     name = "openssl",
     build_file = "//bazel/third_party/openssl:openssl.BUILD",
-    # sha256 = "892a0875b9872acd04a9fde79b1f943075d5ea162415de3047c327df33fbaee5",
+    sha256 = "f89199be8b23ca45fc7cb9f1d8d3ee67312318286ad030f5316aca6462db6c96",
     strip_prefix = "openssl-1.1.1m",
     urls = [
         "https://www.openssl.org/source/openssl-1.1.1m.tar.gz",
