--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -25,5 +25,8 @@ filter=-build/c++14
 filter=-build/header_guard
 filter=+build/pragma_once
 
+# Ignore clang-tidy suppressions
+filter=-readability/nolint
+
 # Ignore code that isn't ours.
 exclude_files=third_party
