Chore: fix repeated config flags during CI

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,5 +37,5 @@ jobs:
       - run: echo "build --disk_cache=$HOME/.cache/bazel/disk_cache" >> .bazelrc
       - run: echo "build --repository_cache=$HOME/.cache/bazel/repository_cache" >> .bazelrc
       - run: tools/setup_clang.sh /usr/lib/llvm-13
-      - run: bazel build -c opt //...
+      - run: bazel build -c opt --config libc++ //...
       - run: bazel test -c opt --config clang-asan //...
