--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -136,9 +136,9 @@ http_archive(
 http_archive(
     name = "rules_python",
     sha256 = RULES_PYTHON_SHA256,
+    strip_prefix = "rules_python-{version}".format(version = RULES_PYTHON_TAG),
     urls = [
-        "https://mirror.bazel.build/github.com/bazelbuild/rules_python/releases/download/{version}/rules_python-{version}.tar.gz".format(version = RULES_PYTHON_TAG),
-        "https://github.com/bazelbuild/rules_python/releases/download/{version}/rules_python-{version}.tar.gz".format(version = RULES_PYTHON_TAG),
+        "https://github.com/bazelbuild/rules_python/archive/{version}.tar.gz".format(version = RULES_PYTHON_TAG),
     ],
 )
 
@@ -342,21 +342,21 @@ http_archive(
 # Ordered lexicographical.
 #
 
-# load("@rules_python//python:pip.bzl", "pip_parse")
+load("@rules_python//python:pip.bzl", "pip_parse")
 
-# # Create a central repo that knows about the dependencies needed from
-# # requirements.txt. The requirements.txt is generated from
-# # poetry export -f requirements.txt --output requirements.txt --dev
-# pip_parse(
-#     name = "mono_pip_deps",
-#     requirements_lock = "//:requirements.txt",
-# )
+# Create a central repo that knows about the dependencies needed from
+# requirements.txt. The requirements.txt is generated from
+# poetry export -f requirements.txt --output requirements.txt --dev
+pip_parse(
+    name = "mono_pip_deps",
+    requirements_lock = "//:requirements.txt",
+)
 
-# # Load the starlark macro which will define your dependencies.
-# load("@mono_pip_deps//:requirements.bzl", "install_deps")
+# Load the starlark macro which will define your dependencies.
+load("@mono_pip_deps//:requirements.bzl", "install_deps")
 
-# # Call it to define repos for your requirements.
-# install_deps()
+# Call it to define repos for your requirements.
+install_deps()
 
 #
 # Perl Dependencies
