Codelab: kafka_message_parser finish request_header_data parsing

--- a/one/codelab/kafka_message_parser/BUILD.bazel
+++ b/one/codelab/kafka_message_parser/BUILD.bazel
@@ -34,6 +34,7 @@ cc_library(
     ],
     visibility = ["//visibility:public"],
     deps = [
+        "//one/base:macros",
         "@com_google_absl//absl/base",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/strings:str_format",
