--- a/one/base/BUILD.bazel
+++ b/one/base/BUILD.bazel
@@ -15,5 +15,15 @@
 # You should have received a copy of the GNU General Public License along with
 # ONE. If not, see <https://www.gnu.org/licenses/>.
 
-# Thie empty BUILD.bazel file is required to make Bazel treat
-# this directory as a package.
+load("@rules_cc//cc:defs.bzl", "cc_library")
+
+cc_library(
+    name = "macros",
+    hdrs = [
+        "macros.h",
+    ],
+    visibility = ["//visibility:public"],
+    deps = [
+        "@com_google_absl//absl/base",
+    ],
+)
