Jinduo: lowercase the filename

--- a/one/jinduo/net/BUILD.bazel
+++ b/one/jinduo/net/BUILD.bazel
@@ -19,7 +19,7 @@ load("@rules_cc//cc:defs.bzl", "cc_library")
 
 cc_library(
     name = "callbacks",
-    hdrs = ["Callbacks.h"],
+    hdrs = ["callbacks.h"],
     copts = [
         "-Wall",
         "-Wextra",
@@ -34,8 +34,8 @@ cc_library(
 
 cc_library(
     name = "timer",
-    srcs = ["internal/Timer.cc"],
-    hdrs = ["internal/Timer.h"],
+    srcs = ["internal/timer.cc"],
+    hdrs = ["internal/timer.h"],
     copts = [
         "-Wall",
         "-Wextra",
