--- a/one/jinduo/net/BUILD.bazel
+++ b/one/jinduo/net/BUILD.bazel
@@ -18,8 +18,15 @@
 load("@rules_cc//cc:defs.bzl", "cc_library")
 
 cc_library(
-    name = "callbacks",
-    hdrs = ["callbacks.h"],
+    name = "net",
+    srcs = [
+        "internal/timer.cc",
+        "internal/timer.h",
+    ],
+    hdrs = [
+        "callbacks.h",
+        "timer_id.h",
+    ],
     copts = [
         "-Wall",
         "-Wextra",
@@ -28,22 +35,6 @@ cc_library(
     visibility = ["//bazel:__pkg__"],
     deps = [
         "//one/base",
-        "@com_google_absl//absl/time",
-    ],
-)
-
-cc_library(
-    name = "timer",
-    srcs = ["internal/timer.cc"],
-    hdrs = ["internal/timer.h"],
-    copts = [
-        "-Wall",
-        "-Wextra",
-        "-Werror",
-    ],
-    visibility = ["//bazel:__pkg__"],
-    deps = [
-        ":callbacks",
         "@com_google_absl//absl/time",
     ],
 )
