Jinduo: port base/this_thread.h & net/event_loop.h

--- a/bazel/BUILD.bazel
+++ b/bazel/BUILD.bazel
@@ -31,6 +31,7 @@ compilation_database(
         "//one/codelab/kafka_message_parser:request_header_data",
         "//one/codelab/libevent_http",
         "//one/codelab/muduo_http",
+        "//one/jinduo/base",
         "//one/jinduo/net",
     ],
 )
