Jinduo: port net/internal/poller.h

--- a/one/jinduo/net/BUILD.bazel
+++ b/one/jinduo/net/BUILD.bazel
@@ -22,6 +22,8 @@ cc_library(
     srcs = [
         "internal/channel.cc",
         "internal/channel.h",
+        "internal/poller.cc",
+        "internal/poller.h",
         "internal/timer.cc",
         "internal/timer.h",
     ],
