--- a/one/jinduo/net/BUILD.bazel
+++ b/one/jinduo/net/BUILD.bazel
@@ -24,6 +24,8 @@ cc_library(
         "internal/channel.h",
         "internal/poller.cc",
         "internal/poller.h",
+        "internal/sockets_ops.cc",
+        "internal/sockets_ops.h",
         "internal/timer.cc",
         "internal/timer.h",
     ],
